--- a/index.html
+++ b/index.html
@@ -8,28 +8,33 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <h1>Simple 'Hangman' Game</h1>
-    <p>[no people will actually be harmed during this game]</p>
+    <div class="wrapper">
+      <div class="content">
+        <h1>Simple 'Hangman' Game</h1>
+        <p>[no people will actually be harmed during this game]</p>
 
-    <div class="win">
-      <h2>You won!</h2>
-      <img src="win.gif" />
+        <div class="win">
+          <h2>You won!</h2>
+          <img src="win.gif" />
+        </div>
+
+        <div class="lose">
+          <h2>You lost..</h2>
+          <img src="lose.gif" />
+          <p>The chosen word was: <span></span></p>
+        </div>
+
+        <input type="text" placeholder="Guess a letter" maxlength="1" />
+        <button class="guess">Guess</button>
+        <button class="restart">Restart</button>
+        <h2>Current word:</h2>
+        <div class="the_word">_ _ _ _ _</div>
+        <h3>Incorrectly guessed letters:</h3>
+        <div class="guessed_letters"></div>
+        <p class="lives">You have <span></span> lives remaining</p>
+      </div>
     </div>
-
-    <div class="lose">
-      <h2>You lost..</h2>
-      <img src="lose.gif" />
-      <p>The chosen word was: <span></span></p>
-    </div>
-
-    <input type="text" placeholder="Guess a letter" maxlength="1" />
-    <button class="guess">Guess</button>
-    <button class="restart">Restart</button>
-    <h2>Current word:</h2>
-    <div class="the_word">_ _ _ _ _</div>
-    <h3>Incorrectly guessed letters:</h3>
-    <div class="guessed_letters"></div>
-    <p class="lives">You have <span></span> lives remaining</p>
+    <div class="credits">Created by Jeroen N. and Patrick B.</div>
     <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
