--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
   <body>
     <div class="wrapper">
       <div class="content">
-        <h1>Simple 'Hangman' Game</h1>
-        <p>[no people will actually be harmed during this game]</p>
+        <div class="title">
+          <h1>Simple 'Hangman' Game</h1>
+          <p>[no people will actually be harmed during this game]</p>
+        </div>
 
-        <div class="win">
+        <div id="noose"></div>
+
+        <div id="youwin" class="win">
           <h2>You won!</h2>
           <img src="win.gif" />
         </div>
@@ -23,15 +27,22 @@
           <img src="lose.gif" />
           <p>The chosen word was: <span></span></p>
         </div>
-
-        <input type="text" placeholder="Guess a letter" maxlength="1" />
-        <button class="guess">Guess</button>
-        <button class="restart">Restart</button>
-        <h2>Current word:</h2>
-        <div class="the_word">_ _ _ _ _</div>
-        <h3>Incorrectly guessed letters:</h3>
-        <div class="guessed_letters"></div>
-        <p class="lives">You have <span></span> lives remaining</p>
+        <div id="inputletter">
+          <input type="text" placeholder="Guess a letter" maxlength="1" />
+          <button class="guess">Guess</button>
+          <button class="restart">Restart</button>
+        </div>
+        <div id="current">
+          <h2>Current word:</h2>
+          <div class="the_word">_ _ _ _ _</div>
+        </div>
+        <div id="incorrect">
+          <h3>Incorrectly guessed letters:</h3>
+          <div class="guessed_letters"></div>
+        </div>
+        <p id="livesleft" class="lives">
+          You have <span></span> lives remaining
+        </p>
       </div>
     </div>
     <div class="credits">Created by Jeroen N. and Patrick B.</div>
