--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<h3>Incorrectly guessed letters:</h3>
 					<div class="guessed_letters"></div>
 				</div>
-				<p id="livesleft" class="lives">
+				<p id="livesleft" git status class="lives">
 					You have <span></span> lives remaining
 				</p>
 			</div>
